# adele-gtk

./: AGENTS.md  Cargo.toml  README.md  SECURITY_AUDIT.md  adele-gtk.desktop  justfile
src/: assets.rs  async_bridge.rs  avatars.rs  builtins.rs  context_usage.rs  credential_store.rs  main.rs  management_client.rs  markdown.rs  markdown_text.rs  mcp_admin.rs  oauth.rs  preferences.rs  profile.rs  selected_models.rs  style-light.css  style.css  theme.rs  voice_client.rs  voice_config.rs  voice_embedded.rs  webview.rs  window.rs
src/widgets/: chat_view.rs  connection_config_dialog.rs  connections_tab.rs  context_menu.rs  conversation_side_pane.rs  general_tab.rs  input_bar.rs  knowledge_browser.rs  login_screen.rs  mcp_server_dialog.rs  mcp_servers_tab.rs  mod.rs  model_picker.rs  personality_dialog.rs  purposes_tab.rs  select_models_dialog.rs  settings_dialog.rs  setup_dialog.rs  sidebar.rs  tasks_panel.rs  voice_tab.rs
src/window/: mod.rs  state.rs  voice.rs
