[package]
name = "adele-gtk"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bin]]
name = "adele-gtk"
path = "src/main.rs"

[features]
default = ["linux"]
linux = ["dep:webkit6", "desktop-assistant-client-common/dbus"]

[dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "6"
keyring-core = "1"
zbus-secret-service-keyring-store = { version = "1", features = ["rt-tokio-crypto-rust"] }
oauth2 = "5"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
gtk4 = { version = "0.11", package = "gtk4" }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
ammonia = "4"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23.37", features = ["ring"] }
# Already in the dependency tree (via the D-Bus transport / secret-service
# keyring store at 5.15.0); pinned to the same major. Used by `theme.rs` to
# track the XDG Settings portal `color-scheme` preference live. The `tokio`
# feature matches the runtime the portal task is spawned on.
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dependencies.webkit6]
version = "0.6"
optional = true

# `mcp-host` enables the client-side MCP host (desktop-assistant#464): gtk runs
# local MCP servers on the edge and advertises their tools to the (possibly
# remote) daemon as client-side tools. Post-#475 this pulls the MCP client
# WITHOUT its HTTP/reqwest transport (the host only spawns stdio servers).
[dependencies.desktop-assistant-client-common]
path = "../desktop-assistant/crates/client-common"
features = ["mcp-host"]

[dependencies.desktop-assistant-api-model]
path = "../desktop-assistant/crates/api-model"

# The shared view-agnostic model+controller (CC-1, desktop-assistant#359). Its
# own path-deps to ../desktop-assistant and ../voice resolve through the SAME
# `.worktrees/adele-gtk/` symlinks this crate uses, so client-common / api-model /
# adele-voice-client-common unify to one source each (no [patch] needed — Option D).
[dependencies.client-ui-common]
path = "../client-ui-common"

# The embeddable voice module (adelie-ai/voice phase 1). Path-dep, mirroring the
# desktop-assistant deps above: a `../voice` symlink under `.worktrees/adele-gtk/`
# points at the voice checkout, and Cargo resolves the module's transitive
# adapter crates (core/tts/…) via the voice workspace automatically. Powers the
# in-app embedded dictation/playback path (issue #65) as an alternative to the
# voice daemon's D-Bus surface.
[dependencies.adele-voice-module]
path = "../voice/crates/module"

# The concrete VAD + STT adapters, only so the embedded engine can name the
# `Dictation<SileroVad, WhisperStt>` returned by `build_dictation` for its
# stored field. Same `../voice` symlink path-dep as the module above; no extra
# crates enter the graph (they're already transitive deps of the module).
[dependencies.adele-voice-vad-silero]
path = "../voice/crates/vad-silero"

[dependencies.adele-voice-stt-whisper]
path = "../voice/crates/stt-whisper"

# Shared client-side voice-output plumbing (desktop-assistant#274): the
# `AdeleOutput` level + narration gate, the byte-identical system-refinement
# constants, and `into_speakable_sentences` (which chunks a long reply into
# one-short-sentence-per-synth pieces so neither the daemon's `SayText` nor the
# embedded `say` hits the per-synth ~20s timeout). Owned once here instead of
# triplicated across the clients; pulls in `adele-voice-core` transitively for
# its `SentenceBuffer`. Same `../voice` symlink path-dep as the module above.
[dependencies.adele-voice-client-common]
path = "../voice/crates/client-voice"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
