[package]
name = "adele-gtk"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bin]]
name = "adele-gtk"
path = "src/main.rs"

[features]
default = ["linux", "builtin-core"]
linux = ["dep:webkit6", "desktop-assistant-client-common/dbus"]

# The core built-in MCP set is compiled in and hosted in-process by default, so
# a fresh gtk client is useful with no client-mcp.toml (da#538 Phase C). Turn a
# server off with e.g. `--no-default-features --features linux,mcp-fileio`, or
# drop them all with `--no-default-features` (gtk then behaves exactly as it did
# before this feature — client-mcp.toml servers only).
builtin-core = ["mcp-fileio", "mcp-terminal", "mcp-tasks", "mcp-web"]
mcp-fileio = ["dep:fileio-mcp"]
mcp-terminal = ["dep:terminal-mcp"]
mcp-tasks = ["dep:tasks-mcp"]
mcp-web = ["dep:web-mcp"]

# The "broad set" of built-in MCP servers (weather / internet-radio /
# openstreetmap / geocode / skills) - the same fleet Adele ships on the daemon,
# minus the core-4. They are compiled in and hosted in-process EXACTLY like the
# core set, but are default-OFF, opt-in: NOT in `default`, so a plain
# `cargo build` links none of them and the default gtk build is byte-identical
# to before. Enable all five with `--features builtin-extras`, or cherry-pick a
# single one (e.g. `--features mcp-weather`). This proves the broad set links and
# hosts in-process; a future mac client copies this block and flips
# `builtin-extras` on by default.
builtin-extras = [
    "mcp-weather",
    "mcp-internet-radio",
    "mcp-openstreetmap",
    "mcp-geocode",
    "mcp-skills",
]
mcp-weather = ["dep:weather-forecast-mcp"]
mcp-internet-radio = ["dep:internet-radio-mcp"]
mcp-openstreetmap = ["dep:openstreetmap-mcp"]
mcp-geocode = ["dep:geocode-mcp"]
mcp-skills = ["dep:skills-mcp"]

[dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "6"
keyring-core = "1"
zbus-secret-service-keyring-store = { version = "1", features = ["rt-tokio-crypto-rust"] }
oauth2 = "5"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
# Enable the `v4_22` API level (matching our GTK 4.22 runtime). gtk4 0.11.4 moved
# core types like `Accessible` behind version cfgs, and webkit6 references
# `gtk::Accessible` unconditionally, so a version feature MUST be enabled or the
# build breaks under gtk4 >= 0.11.4. `v4_22` gives the widest API surface and is
# robust against future patch releases gating more symbols behind higher version
# cfgs. It also turns deprecation markers (<= 4.22) into hard errors under
# `-D warnings`; `theme.rs` was migrated off the deprecated `CssProvider` and
# GtkSettings prefer-dark-theme APIs (issue #116) to keep the build clean.
gtk4 = { version = "0.11", features = ["v4_22"], package = "gtk4" }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
ammonia = "4"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23.37", features = ["ring"] }
# Already in the dependency tree (via the D-Bus transport / secret-service
# keyring store at 5.15.0); pinned to the same major. Used by `theme.rs` to
# track the XDG Settings portal `color-scheme` preference live. The `tokio`
# feature matches the runtime the portal task is spawned on.
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Compiled-in ("built-in") MCP servers hosted in-process (da#538 Phase C). Each
# core server lib exposes `build_service()`; gtk hosts them via
# `McpHost::start_with` so a fresh client has core tools with no client-mcp.toml.
# Optional + feature-gated (see `[features]`) so a `--no-default-features` build
# links none of them and behaves exactly as before. Sibling path-deps, matching
# how the desktop-assistant crates are path-depped above.
fileio-mcp = { path = "../fileio-mcp", optional = true }
terminal-mcp = { path = "../terminal-mcp", optional = true }
tasks-mcp = { path = "../tasks-mcp", optional = true }
web-mcp = { path = "../web-mcp", optional = true }

# The opt-in "broad set" built-in servers (see the `builtin-extras` feature).
# Same optional + feature-gated path-dep shape as the core-4 above, so a build
# without their feature links none of them. Each exposes an infallible
# `build_service()` for in-process hosting. They float the `mcp-core` git dep
# unpinned (like the core-4), which the `[patch]` below collapses to the single
# `../mcp-core` source so every consumer resolves to one `McpService` type.
weather-forecast-mcp = { path = "../weather-forecast-mcp", optional = true }
internet-radio-mcp = { path = "../internet-radio-mcp", optional = true }
openstreetmap-mcp = { path = "../openstreetmap-mcp", optional = true }
geocode-mcp = { path = "../geocode-mcp", optional = true }
skills-mcp = { path = "../skills-mcp", optional = true }

[dependencies.webkit6]
version = "0.6"
optional = true

# `mcp-host` enables the client-side MCP host (desktop-assistant#464): gtk runs
# local MCP servers on the edge and advertises their tools to the (possibly
# remote) daemon as client-side tools. Post-#475 this pulls the MCP client
# WITHOUT its HTTP/reqwest transport (the host only spawns stdio servers).
[dependencies.desktop-assistant-client-common]
path = "../desktop-assistant/crates/client-common"
features = ["mcp-host"]

[dependencies.desktop-assistant-api-model]
path = "../desktop-assistant/crates/api-model"

# The shared view-agnostic model+controller (CC-1, desktop-assistant#359). Its
# own path-deps to ../desktop-assistant and ../voice resolve through the SAME
# `.worktrees/adele-gtk/` symlinks this crate uses, so client-common / api-model /
# adele-voice-client-common unify to one source each (no [patch] needed — Option D).
[dependencies.client-ui-common]
path = "../client-ui-common"

# The embeddable voice module (adelie-ai/voice phase 1). Path-dep, mirroring the
# desktop-assistant deps above: a `../voice` symlink under `.worktrees/adele-gtk/`
# points at the voice checkout, and Cargo resolves the module's transitive
# adapter crates (core/tts/…) via the voice workspace automatically. Powers the
# in-app embedded dictation/playback path (issue #65) as an alternative to the
# voice daemon's D-Bus surface.
[dependencies.adele-voice-module]
path = "../voice/crates/module"

# The concrete VAD + STT adapters, only so the embedded engine can name the
# `Dictation<SileroVad, WhisperStt>` returned by `build_dictation` for its
# stored field. Same `../voice` symlink path-dep as the module above; no extra
# crates enter the graph (they're already transitive deps of the module).
[dependencies.adele-voice-vad-silero]
path = "../voice/crates/vad-silero"

[dependencies.adele-voice-stt-whisper]
path = "../voice/crates/stt-whisper"

# Shared client-side voice-output plumbing (desktop-assistant#274): the
# `AdeleOutput` level + narration gate, the byte-identical system-refinement
# constants, and `into_speakable_sentences` (which chunks a long reply into
# one-short-sentence-per-synth pieces so neither the daemon's `SayText` nor the
# embedded `say` hits the per-synth ~20s timeout). Owned once here instead of
# triplicated across the clients; pulls in `adele-voice-core` transitively for
# its `SentenceBuffer`. Same `../voice` symlink path-dep as the module above.
[dependencies.adele-voice-client-common]
path = "../voice/crates/client-voice"

# Collapse mcp-core to a SINGLE source. client-common pins it to a git rev while
# the built-in server libs (fileio/terminal/tasks/web) float the git dep; two
# git sources would split `mcp_core::McpService` into incompatible types (E0308)
# when a built-in's `Arc<dyn McpService>` is handed to `BuiltinServer::new`.
# Patching the URL to the local checkout resolves every consumer to one
# mcp-core. `../mcp-core` is a superset of the pinned rev (only security/CLI
# hardening + docs ahead; the `McpService` trait is byte-identical), so the API
# client-common compiles against is unchanged. gtk already path-deps the
# desktop-assistant crates the same way (Option D above).
[patch."https://github.com/adelie-ai/mcp-core"]
mcp-core = { path = "../mcp-core" }

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

# Release profiles. Default favors small, fast binaries (strip + thin LTO).
# Build variants: `cargo build --profile release-fast` / `--profile release-small`.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "unwind"

[profile.release-fast]
inherits = "release"
lto = "fat"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
panic = "abort"
strip = true
